@@ -21,3 +21,5 @@ delegation-only.	NS	ns.delegation-only.
 ns.delegation-only.	A	10.53.0.6
 example.net.		NS	ns.example.net.
 ns.example.net.		A	10.53.0.6
+no-questions.		NS	ns.no-questions.
+ns.no-questions.	A	10.53.0.8
